Adiciona uma navegação basica

--- a/tabelas.html
+++ b/tabelas.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> Elementos de Tabelas</h1>
-    <p> Tabelas são elementos estruturais que organizam dados multivariados relacionados dentro de um conteudo. Não use tabelas par fazer  listas</p>
+    <p> Tabelas são <a href="index.html">elementos estruturais</a> que organizam dados multivariados relacionados dentro de um conteudo. Não use tabelas par fazer  listas</p>
  
 </body>
 </html>
