--- a/listas.html
+++ b/listas.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> Elementos de Listas</h1>
-    <p> Listas são elementos estruturais que organizam itens relacionadios dentro de um conteudo. Não Use listas para dados multivariados, use tabekas</p>
+    <p> Listas são <a href="index.html">elementos estruturais </a>que organizam itens relacionadios dentro de um conteudo. Não Use listas para dados multivariados, use tabelas</p>
     <h2> Listas Ordenadas </h2>
     <h2> Listas não ordenadas </h2>
     <h2> Listas de definição  </h2>
