Adiciona Navegação auxiliar

--- a/tabelas.html
+++ b/tabelas.html
@@ -6,8 +6,18 @@
     <title>DCC 202 Aula 05: Listas </title>
 </head>
 <body>
+    <main>
     <h1> Elementos de Tabelas</h1>
     <p> Tabelas são <a href="index.html">elementos estruturais</a> que organizam dados multivariados relacionados dentro de um conteudo. Não use tabelas par fazer  <a href="listas.html">listas</a></p>
- 
+</main>
+<aside>
+    <nav>
+        <ul>
+            <li> <a href="index.html"> Elementos Estruturais</a></li>
+            <li><a href="listas.html"> Listas</a> </li>
+             <li><a href="tabelas.html"> Tabelas</a> </li>
+             </ul>
+    </nav>
+</aside>
 </body>
 </html>
